<resources>
    <string name="app_name">Farma App</string>
    <string name="temp_">%s °C</string>
    <string name="date_">Today, %1$s %2$s</string>
    <string name="weather_now">Weather Now</string>
    <string name="sunny">Sunny</string>
    <string name="c">°C</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">%skm/h</string>
    <string name="humidity_p">%s%</string>
    <string name="today_s_weather">Today\'s weather</string>
    <string name="time">00:00</string>
    <string name="time_">\nTime : %s</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="home_title">Home</string>
    <string name="weather_title">Weather</string>
    <string name="create_an_account">Create \nan account</string>
    <string name="welcome">Welcome</string>
    <string name="title">Title</string>
    <string name="market_rate">Market Rate</string>
    <string name="new_updates">New Updates</string>
    <string name="wind_home">Wind:</string>
    <string name="wind_text">Wind</string>
    <string name="next">Next</string>
    <string name="next_"><![CDATA[Swipe >>]]></string>
    <string name="retry">Retry</string>
    <string name="check_internet_connection">Please check your internet connection!</string>
    <string name="daily_updated_news">Daily Updated News</string>
    <string name="demo">ide complete projects through training, which will include all the processes starting from manufacturing to selling of the product at market,\\\" he added.\\n\\nRajiv Gupta, the principal, said that through this course students could develop a newfound interest in organic farming with new technologies and ample opportunities. \\\"We want to nurture the agricultural activities amongst students so that it can provide them new career avenues. Students can also sell the items they will grow as a part of their academic projects.\\\"\\n\\nThe participation in the course has received a positive response with over 600 students already enrolled. \\\"We have divided the students in 120 groups, with five members in each group,\\\" the principal added.\\n\\nSecond year BA student, Shivangi Diwakar despite having little knowledge about farming has been inspired to think of her own start-up after joining this vocational training. She said, \\\"after graduation, many of us want to opt for government or private jobs, which has tough competition. Through such courses, we can have our own start-ups.\\\"</string>
    <string name="news">News</string>
    <string name="news_s">news : %s</string>
    <string name="language_s">Language : %s</string>
    <string name="publish_s">Publish : %s</string>
    <string name="daily_updated_news_">Daily updated news</string>
    <string name="news_details">News Details</string>
    <string name="agriculture">Agriculture</string>
    <string name="today_s_report">Today\'s Report</string>
    <string name="address_s">Location : %s</string>
    <string name="today_s_forecast">Today\'s forecast</string>
    <string name="wind_direction">Wind \nDirection</string>
    <string name="wind_direction_value" />
    <string name="next_7_days"><![CDATA[Next 7 days >]]></string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="today">Today</string>
    <string name="next_forecast">Next Forecast</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_1_jun">1 jun</string>
    <string name="seven_days_forecast">7 Days Forecast</string>
    <string name="today_s_chart">Today\'s Chart</string>
    <string name="_01_pm">01 PM</string>
    <string name="_24">24°</string>

</resources>